Major changes to library including new api, similar license to Rob's code.

--- a/README
+++ b/README
@@ -1,7 +1,10 @@
-Random - A library for reading and debiasing input from a hardware random number bit generator.
+Random - A library for reading and debiasing input from a hardware random bit generator.
 Created by Derek Chafin
-December 5, 2011
-Released into public domain
+based on code by Rob Seward
+October 24, 2012
+License: Attribution-NonCommercial 3.0 Unported
 
 This library reads output from a random bit generator using the arduino's adc.
 It has two bias removal methods, exclusive or (XOR) and von neumann code, as well the option for no bias removal at all.
+
+The circuit design is by Rob Seward and can be found at http://robseward.com/misc/RNG2/
